Fix overflowing issue when too much text is added.

--- a/styles.css
+++ b/styles.css
@@ -18,4 +18,5 @@ body {
     width: 80%;
     padding: 1em;
     font-family: monospace;
+    overflow: scroll;
 }
